@@ -1,116 +1,142 @@
 package RetroConcepteur.vue.outil;
 
-// Paquetage awt
-import java.awt.List;
-
-// Paquetage Util
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.HashMap;
+import java.util.List;
 
-// Nos paquetage
-import RetroConcepteur.vue.outil.*;
-
+/**
+ * Represente la zone rectangulaire d'une classe UML sur le diagramme.
+ * Gere les dimensions, la position et les points d'ancrage des liaisons (chemins).
+ */
 public class Rectangle
 {
 	private int x;
 	private int y;
 	private int tailleX;
 	private int tailleY;
+	
+	// Stocke les chemins connectes sur chaque cote ('H', 'B', 'G', 'D')
 	private HashMap<Character, ArrayList<Chemin>> hashPosPrises;
 
 	/**
-	 *	Creer une instance de Rectangle
-	 *	@param x pos X de coin haut gauche
-	 *	@param y cord Y
-	 *	@param tailleX taille de longeur
-	 *	@param tailleY taille de la hauteur
+	 * Cree une nouvelle instance de Rectangle.
+	 *
+	 * @param x       Position X du coin haut-gauche.
+	 * @param y       Position Y du coin haut-gauche.
+	 * @param tailleX Largeur du rectangle.
+	 * @param tailleY Hauteur du rectangle.
 	 */
 	public Rectangle(int x, int y, int tailleX, int tailleY)
 	{
-		this.x = x;
-		this.y = y;
-
+		this.x       = x;
+		this.y       = y;
 		this.tailleX = tailleX;
 		this.tailleY = tailleY;
 		
-		this.hashPosPrises = new HashMap<Character, ArrayList<Chemin>>();
+		this.hashPosPrises = new HashMap<>();
 
-		this.hashPosPrises.put('H', new ArrayList<Chemin>());
-		this.hashPosPrises.put('B', new ArrayList<Chemin>());
-		this.hashPosPrises.put('D', new ArrayList<Chemin>());
-		this.hashPosPrises.put('G', new ArrayList<Chemin>());
+		this.hashPosPrises.put('H', new ArrayList<Chemin>()); // Haut
+		this.hashPosPrises.put('B', new ArrayList<Chemin>()); // Bas
+		this.hashPosPrises.put('D', new ArrayList<Chemin>()); // Droite
+		this.hashPosPrises.put('G', new ArrayList<Chemin>()); // Gauche
 	}
 
-	//---------------------------------------//
-	//          Gestion de souris            //
-	//---------------------------------------//
+	/*---------------------------------------*/
+	/* GETTERS                */
+	/*---------------------------------------*/
 	
-	public int getX() { return this.x; }
-	public int getY() { return this.y; }
-	
+	public int getX      () { return this.x                   ; }
+	public int getY      () { return this.y                   ; }
 	public int getCentreX() { return this.x + this.tailleX / 2; }
 	public int getCentreY() { return this.y + this.tailleY / 2; }
+	public int getTailleX() { return this.tailleX             ; }
+	public int getTailleY() {return this.tailleY              ;	}
 
-	public int getTailleX() { return this.tailleX; }
-	public int getTailleY() { return this.tailleY; }
-
-	public ArrayList<Chemin> getListeChemin()
+	/**
+	 * Retourne la liste complete de tous les chemins connectes a ce rectangle,
+	 * tous cotes confondus.
+	 */
+	public List<Chemin> getListeChemin()
 	{
-		ArrayList<Chemin> liste = new ArrayList<Chemin>();
+		ArrayList<Chemin> liste = new ArrayList<>();
 		for (ArrayList<Chemin> lst : this.hashPosPrises.values())
+		{
 			liste.addAll(lst);
-
+		}
 		return liste;
 	}
 
-	public int getNbPoint(char c) { return this.hashPosPrises.get(c).size(); }
 
-	//---------------------------------------//
-	//          Gestion de souris            //
-	//---------------------------------------//
+	public int getNbPoint(char c) {return this.hashPosPrises.get(c).size();}
+
+	/*---------------------------------------*/
+	/*               SETTERS                 */
+	/*---------------------------------------*/
 	
-	public void deplacerX(int x)
-	{
-		this.x += x;
+
+	public void setTailleX(int x) 
+	{ 
+		this.tailleX = x; 
+		this.mettreAJourToutesLesLiaisons(); 
 	}
 
-	public void deplacerY(int y)
-	{
-		this.y += y;
+
+	public void setTailleY(int y) 
+	{ 
+		this.tailleY = y; 
+		this.mettreAJourToutesLesLiaisons(); 
 	}
 
-	public void setTailleX(int x) { this.tailleX = x; mettreAJourToutesLesLiaisons(); }
-	public void setTailleY(int y) { this.tailleY = y; mettreAJourToutesLesLiaisons(); }
-	public void setX(int x) { this.x = x; mettreAJourToutesLesLiaisons(); }
-	public void setY(int y) { this.y = y; mettreAJourToutesLesLiaisons(); }
 
-	//---------------------------------------//
-	//          Gestion de souris            //
-	//---------------------------------------//
-	
+	public void setX(int x) 
+	{ 
+		this.x = x; 
+		this.mettreAJourToutesLesLiaisons(); 
+	}
+
+
+	public void setY(int y) 
+	{ 
+		this.y = y; 
+		this.mettreAJourToutesLesLiaisons(); 
+	}
+
+	/*---------------------------------------*/
+	/*          MODIFICATEURS                */
+	/*---------------------------------------*/
+
+
+	public void deplacerX(int deltaX) {this.x += deltaX;}
+	public void deplacerY(int deltaY) {this.y += deltaY;}
+
 	/**
-	 *	Ajoute le chemin a la hashmap pour la clé de la direction
-	 *	@param c la direction en char
-	 *	@param chemin le chemin
+	 * Ajoute un chemin (liaison) sur un cote specifique du rectangle.
+	 * @param c La direction ('H', 'B', 'G', 'D').
+	 * @param chemin L'objet chemin a connecter.
 	 */
-	public void addPos(char c, Chemin chemin) { this.hashPosPrises.get(c).add(chemin); }
+	public void addPos(char c, Chemin chemin) {this.hashPosPrises.get(c).add(chemin);}
 	
 	/**
-	 *  supprime le dernier chemin a la hashmap pour la clé de direction
-	 *	@param c la direction en char
+	 * Supprime le dernier chemin ajoute sur un cote specifique.
+	 * @param c La direction ('H', 'B', 'G', 'D').
 	 */
 	public void supPos(char c)
 	{
-		
 		ArrayList<Chemin> listeChemins = this.hashPosPrises.get(c);
-		if (listeChemins.size() > 0)
-			listeChemins.removeLast();
+		if (!listeChemins.isEmpty())
+			listeChemins.remove(listeChemins.size() - 1);
 	}
+
+	/*---------------------------------------*/
+	/*         MeTHODES D'INSTANCE           */
+	/*---------------------------------------*/
+	
+	
 	
 	/**
-	 *	Retourne si un point est dans le rectangle
-	 *	@param autre un point
+	 * Verifie si un point donne se trouve a l'interieur du rectangle.
+	 * @param autre Le point a tester.
+	 * @return true si le point est dans le rectangle, false sinon.
 	 */
 	public boolean possede(Point autre)
 	{
@@ -118,22 +144,23 @@ public class Rectangle
 		int autreY = autre.getY();
 
 		return autreX >= this.x && autreX <= this.x + this.tailleX &&
-			   autreY >= this.y && autreY <= this.y + this.tailleY;
+			autreY >= this.y && autreY <= this.y + this.tailleY;
 	}
 
 	/**
-	 *	Mets à jour un chemin autour d'un rectangle
-	 *	@param zone direction 
+	 * Recalcule la position des points d'ancrage sur un cote donne
+	 * pour qu'ils soient equitablement espaces.
+	 * @param zone Le cote a mettre a jour ('H', 'B', 'G', 'D').
 	 */
 	public void repartirPointsLiaison(char zone)
 	{
-		ArrayList<Chemin> listeChemins = this.hashPosPrises.get( zone );
+		ArrayList<Chemin> listeChemins = this.hashPosPrises.get(zone);
 		int nbPoints = listeChemins.size();
 		
-		if ( nbPoints > 0 )
+		if (nbPoints > 0)
 		{
-			double espacement = 0;
-			
+			double espacement;
+			 
 			if (zone == 'H' || zone == 'B') 
 			{
 				espacement = (double) this.tailleX / (nbPoints + 1);
@@ -142,13 +169,11 @@ public class Rectangle
 				{
 					Chemin chemin = listeChemins.get(i);
 					int positionX = this.x + (int)(espacement * (i + 1));
-					
 					int positionY = (zone == 'H') ? this.y : this.y + this.tailleY;
 
-					chemin.updatePoint(this, positionX, positionY);						
+					chemin.updatePoint(this, positionX, positionY);                     
 				}
 			}
-			// Cas Vertical (Gauche / Droite)
 			else if (zone == 'G' || zone == 'D') 
 			{
 				espacement = (double) this.tailleY / (nbPoints + 1);
@@ -157,16 +182,17 @@ public class Rectangle
 				{
 					Chemin chemin = listeChemins.get(i);
 					int positionY = this.y + (int)(espacement * (i + 1));
-					
 					int positionX = (zone == 'G') ? this.x : this.x + this.tailleX;
 
-					chemin.updatePoint(this, positionX, positionY);				
+					chemin.updatePoint(this, positionX, positionY);             
 				}
 			}
 		}
 	}
 
-
+	/**
+	 * Force le recalcul des positions de toutes les liaisons connectees au rectangle.
+	 */
 	public void mettreAJourToutesLesLiaisons() 
 	{
 		this.repartirPointsLiaison('H');
@@ -175,6 +201,10 @@ public class Rectangle
 		this.repartirPointsLiaison('D');
 	}
 
+	/**
+	 * Vide toutes les listes de connexions.
+	 * Utilise avant de recalculer entierement le graphe.
+	 */
 	public void nettoyerLiaisons()
 	{
 		this.hashPosPrises.get('H').clear();
@@ -182,5 +212,4 @@ public class Rectangle
 		this.hashPosPrises.get('G').clear();
 		this.hashPosPrises.get('D').clear();
 	}
-
 }
